# raspberrypi-pico-projects

./: LICENSE  README.md
nrf-node/: CMakeLists.txt
nrf-node/src/: main.c
